--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,10 @@ python:
   - "2.7"
   - "3.5"
   - "3.6"
-install: pip install -r requirements.txt
+env:
+  - NP_VERSION=1.21.0
+  - NP_VERSION=1.18.4
+install: 
+  - pip install -r requirements.txt
+  - pip install -q numpy==$NP_VERSION
 script: python test.py
